# Nirify

./: .gitignore  CLAUDE.md  CODE_REVIEW_REPORT.md  COMPILE_OPTIMIZATION.md  CSS-implementation.md  Cargo.toml  DIOXUS_MIGRATION.md  FIXES.md  MIGRATION_PROGRESS.md  Makefile  PHASE0_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PROGRESS.md  PROGRESS_NOTES.md  README.md  UI_UX_DESIGN_GUIDE.md  VIZIA_MIGRATION_ANALYSIS.md  build.rs  install.sh  nirify.desktop
.backup-slint/: Cargo.toml  lib.rs  main.rs  wizard.rs
.backup-slint/src-ui/bridge/: converters.rs  indices.rs  key_mapping.rs  sync.rs  sync_macros.rs
.backup-slint/src-ui/bridge/callbacks/: animations.rs  backups.rs  behavior.rs  cursor.rs  gestures.rs  keybindings.rs  mouse.rs  outputs.rs  rules_common.rs  startup.rs  touchpad.rs  trackpoint.rs
.backup-slint/ui/: styles.slint
.backup-slint/ui/dialogs/: consolidation_dialog.slint  diff_view.slint  error_dialog.slint
.backup-slint/ui/pages/: animations.slint  backups.slint  behavior.slint  displays.slint  miscellaneous.slint  tools.slint  touch.slint  window_rules.slint  workspaces.slint
.backup-slint/ui/widgets/: base_setting_row.slint  category_nav.slint  combobox_row.slint  dynamic_settings.slint  floating_panel.slint  integer_input_row.slint  percentage_slider_row.slint  search.slint  section.slint  sidebar.slint
.cargo/: config.toml
.github/workflows/: release.yml
aur/nirify-bin/: PKGBUILD
aur/nirify-git/: PKGBUILD
benches/: benchmarks.rs
docs/: 01-existing-niri-settings-analysis.md  02-niri-configuration-system.md  03-slint-feasibility.md  04-config-takeover-strategy.md  05-feasibility-summary.md  06-recommendations.md  A_GRADE_GUIDE.md  COVERAGE_ANALYSIS.md  DESIGN_DOCUMENT.md  DESIGN_SYSTEM.md  DE_ARCHITECTURE.md  FUTURE_IMPROVEMENTS.md  ICED_API.md  ICED_THEMING_GUIDE.md  ICED_WIDGET_CATALOG.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  MIGRATION_COMPLETE.md  MISSING_FEATURES_IMPLEMENTATION_PLAN.md  PACKAGING.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_7_COMPLETE.md  PHASE_8_COMPLETE.md  PHASE_9_COMPLETE.md  PROGRESS.md  SCHEMA_EVALUATION.md  THEME_SYSTEM.md
macros/: Cargo.toml
macros/src/: lib.rs
resources/: niri-settings.desktop
src/: app.rs  constants.rs  handlers.rs  hardware.rs  lib.rs  main.rs  main_tessera.rs  messages.rs  save_manager.rs  search.rs  styles.css  system_theme.rs  theme.rs  types.rs  version.rs  wizard.rs
src/app/: helpers.rs  mod.rs  ui_state.rs
src/config/: category_section.rs  consolidation.rs  dirty.rs  error.rs  mod.rs  parser.rs  paths.rs  preferences.rs  registry.rs  replace.rs  validation.rs
src/diff/: generator.rs  mod.rs  types.rs
src/ipc/: async_ops.rs  mod.rs  tasks.rs
src/ui/: app.rs  (+6 more)
tests/: callback_logic_tests.rs  concurrency_tests.rs  consolidation_tests.rs  error_injection_tests.rs  import_tests.rs  integration_test.rs  ipc_mock_tests.rs  macro_tests.rs  property_tests.proptest-regressions  property_tests.rs  smart_replace.rs  snapshot_tests.rs
ui/: main.slint  styles.slint
vizia-poc/: Cargo.toml  QUICKSTART.md  README.md  benchmark.sh
vizia-poc/.cargo/: config.toml
vizia-poc/src/: app_state.rs  constants.rs  main.rs  types.rs
vizia-poc/src/ui/: keyboard_page.rs  mod.rs  mouse_page.rs  sidebar.rs  touchpad_page.rs
(+319 files in other folders)
