[package]
name = "nirify"
version = "0.2.7-1"
edition = "2021"
rust-version = "1.82"
description = "A native settings application for the niri Wayland compositor"
license = "GPL-3.0"
authors = ["nirify contributors"]
keywords = ["wayland", "niri", "settings", "gui", "nirify"]
categories = ["gui", "config"]

[workspace]
members = ["macros"]

[dependencies]
nirify-macros = { path = "macros" }
# Iced UI framework
iced = { version = "0.14", features = ["tokio", "debug"] }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
kdl = { version = "6.5", features = ["v1-fallback"] }
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
shell-words = "1.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
log = "0.4"
env_logger = "0.11"
rfd = "0.15"
paste = "1.0"
regex-syntax = "0.8"

# System theme detection
ashpd = "0.12"
notify = "7"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3.23"
proptest = "1.4"
insta = "1.34"
criterion = { version = "0.5", features = ["html_reports"] }
serial_test = "3.2"

[[bench]]
name = "benchmarks"
harness = false

# Dev profile: optimize dependencies but keep local code debuggable
[profile.dev]
opt-level = 0

# Compile dependencies with optimizations (makes iced much faster to build/run)
[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = "thin"  # Much faster than full LTO, 80% of the benefit
strip = true
codegen-units = 16  # Parallel codegen
