[package]
name = "niri-settings"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "A native settings application for the niri Wayland compositor"
license = "GPL-3.0"
authors = ["niri-settings contributors"]
keywords = ["wayland", "niri", "settings", "gui"]
categories = ["gui", "config"]

[workspace]
members = ["macros"]

[dependencies]
niri-settings-macros = { path = "macros" }
slint = "1.14"
kdl = { version = "6.5", features = ["v1-fallback"] }
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
shell-words = "1.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
log = "0.4"
env_logger = "0.11"
rfd = "0.15"
paste = "1.0"

[build-dependencies]
slint-build = "1.14"

[dev-dependencies]
tempfile = "3.23"
proptest = "1.4"
insta = "1.34"
criterion = { version = "0.5", features = ["html_reports"] }
serial_test = "3.2"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
